[gd_scene load_steps=7 format=3 uid="uid://j8vcvir0bsaj"]

[ext_resource type="Script" path="res://Scenes/Characters/Enemy/EnemyBaseScene.gd" id="1_qqbmt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ldoks"]
radius = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qoi8o"]
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="CircleShape2D" id="CircleShape2D_1nks0"]
radius = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gvqdj"]
radius = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ofrvu"]
radius = 180.0

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 514
collision_mask = 577
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_qqbmt")
health = 100.0
maxHealth = 100.0
level = 1
physicalDamage = 5.0
physicalDefense = 5.0
magicalDefense = 5.0
speed = 5.0

[node name="Body" type="CollisionShape2D" parent="."]
visible = false
light_mask = 65
visibility_layer = 65
position = Vector2(0, -0.5)
shape = SubResource("CircleShape2D_ldoks")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qoi8o")

[node name="Timers" type="Node" parent="."]

[node name="StateTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="IdleTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="MakePath" type="Timer" parent="Timers"]
wait_time = 0.2
autostart = true

[node name="Areas" type="Node2D" parent="."]
visible = false

[node name="Hitbox" type="Area2D" parent="Areas" groups=["EnemyHitbox"]]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Hitbox"]
shape = SubResource("CircleShape2D_1nks0")

[node name="Hurtbox" type="Area2D" parent="Areas"]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Hurtbox"]
shape = SubResource("CircleShape2D_gvqdj")

[node name="Detectbox" type="Area2D" parent="Areas"]
collision_layer = 64
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/Detectbox"]
shape = SubResource("CircleShape2D_ofrvu")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 10.0
path_max_distance = 15.0
navigation_layers = 3
path_postprocessing = 1
debug_enabled = true

[connection signal="timeout" from="Timers/StateTimer" to="." method="_on_state_timeout_timeout"]
[connection signal="timeout" from="Timers/IdleTimer" to="." method="IdleTimeout"]
[connection signal="timeout" from="Timers/MakePath" to="." method="MakePath"]
[connection signal="area_entered" from="Areas/Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="Areas/Detectbox" to="." method="EnemyDetected"]
